[#1229] adding dynamo events build command in circle ci Adding user fields and signed_on field in dbModel of signatures implementing function GetClaGroupICLASignatures adding new api listClaGroupIclaSignature
