# cla-backend-go/swagger/cla.v2.yaml
@@ -1085,6 +1085,34 @@ paths:
       tags:
         - github-repositories
 
+  /cla-group/{claGroupID}/icla/signatures:
+    get:
+      summary: List icla signatures for cla group
+      description: Return list of icla signatures for cla group
+      operationId: listClaGroupIclaSignature
+      parameters:
+        - $ref: "#/parameters/x-request-id"
+        - $ref: "#/parameters/x-acl"
+        - $ref: "#/parameters/x-username"
+        - $ref: "#/parameters/x-email"
+        - $ref: "#/parameters/path-claGroupID"
+        - $ref: '#/parameters/searchTerm'
+      responses:
+        '200':
+          description: 'Success'
+          schema:
+            $ref: '#/definitions/icla-signatures'
+        '400':
+          $ref: '#/responses/invalid-request'
+        '403':
+          $ref: '#/responses/forbidden'
+        '404':
+          $ref: '#/responses/not-found'
+        '500':
+          $ref: '#/responses/internal-server-error'
+      tags:
+        - signatures
+
   /signatures/id/{signatureID}:
     get:
       summary: Get the signature by ID
@@ -2272,6 +2300,12 @@ definitions:
 
   signature:
     $ref: './common/signature.yaml'
+
+  icla-signatures:
+    $ref: './common/icla-signatures.yaml'
+
+  icla-signature:
+    $ref: './common/icla-signature.yaml'
 
   approval-list:
     $ref: './common/signature-approval-list.yaml'
